# transcript-intel

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 02_analysis.ipynb
outputs/: meetings.csv  meetings.parquet
outputs/llm_logs/: 01KQ03B0303900521BB089CA.json  01KQ0C1280EDA4E70AAD7C35.json  01KQ0CAE7F064EC93F0540CA.json  01KQ0DFE299AC7A74E8022CA.json  01KQ0F8AFF3DA34FD4580008.json  01KQ1267C6AA7D9B3125FEC8.json  01KQ1A6B7E81B06F4A13B60D.json  01KQ1DC6CA536DE1B31ED8F5.json  01KQ1DCC80852AE384C898C9.json  01KQ1DE954A807A5D2653175.json  01KQ2217B066855A3B7814CB.json  01KQ2331EFD78BF3B1CAB747.json  01KQ25D8AED944B5D2A9FF60.json  01KQ298F2846EFE59B0D70E2.json  01KQ2B4878EC7B3EE5547007.json  01KQ2D93184912F0147315E7.json  01KQ31ED026F745FE2A55CCD.json  01KQ325BDEDEE927D2970775.json  01KQ351E141926AB7CAB668D.json  01KQ38C4101D6774F2F02331.json  01KQ38FE02AEE5AA5157F042.json  01KQ3BD8DEEBC7FECD107F0F.json  01KQ3C837D7EF689408DCF95.json  01KQ3CE40428CCC5FF433FFC.json  01KQ3D8C1EF16C042F31FAFD.json  01KQ3F90FF9EBC3DB3632514.json  01KQ410FB7E434BA3F99EE7D.json  01KQ41FB5CCFD9EA583FB020.json  01KQ445B1B5B890316C9E300.json  01KQ4529010F423FD9DB40BD.json  01KQ45C0AD36B351A3571940.json  01KQ45C76AF3AEA6B3EA6697.json  01KQ45F6F7349D0A620571F1.json  01KQ46A9DE0AECB006D897A0.json  01KQ4D01DCB15C69672AB5AF.json  01KQ4D504CE09A8F6ECA1F5A.json  01KQ4D71CDFB1045A2458216.json  01KQ4EE836687F95080D92AB.json  01KQ51DC4345D9DAE005678C.json  01KQ54917E3931712516916D.json  (+60 more)
src/transcript_intel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+12 files in other folders)
